# python-custom-test-runner

./: .gitignore  README.md  build.ps1  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
XrayTestRunner/: TestBase.py  XrayTestResult.py  XrayTestRunner.py  XrayTestRunnerFile.py  __init__.py
XrayTestRunner/utilities/: __init__.py  generic.py
tests/: test_test_base.py  test_xray_test_runner.py  test_xray_test_runner_file.py
